fix(clear button): align background color and hover state for disabled variant (#3258)
* chore(clear button): resolve conflict

* chore(clear button): adds changeset

* chore(clear button): remove declaration + unnecessary stylelint

* chore(clear button): add .spectrum-ClearButton.is-disabled selector

* chore(clear button): add .spectrum-ClearButton--staticWhite selectors

* chore(clear button): update changelog

--- a/components/clearbutton/index.css
+++ b/components/clearbutton/index.css
@@ -46,6 +46,8 @@
 		--mod-clear-button-background-color-key-focus: transparent;
 	}
 
+	/* @deprecated .spectrum-ClearButton--overBackground */
+	&.spectrum-ClearButton--staticWhite,
 	&.spectrum-ClearButton--overBackground {
 		--mod-clear-button-icon-color: var(--spectrum-white);
 		--mod-clear-button-icon-color-hover: var(--spectrum-white);
@@ -65,13 +67,20 @@
 		--mod-clear-button-icon-color-down: var(--spectrum-disabled-content-color);
 		--mod-clear-button-background-color: var(--mod-clear-button-background-color-disabled, transparent);
 	}
+
+	&.spectrum-ClearButton--staticWhite {
+		--spectrum-clear-button-icon-color-disabled: var(--spectrum-disabled-static-white-content-color);
+	}
 }
 
 .spectrum-ClearButton {
 	block-size: var(--mod-clear-button-height, var(--spectrum-clear-button-height));
 	inline-size: var(--mod-clear-button-width, var(--spectrum-clear-button-width));
 	border-radius: 100%;
-	cursor: pointer;
+
+	&:not(:disabled) {
+		cursor: pointer;
+	}
 
 	background-color: var(--mod-clear-button-background-color, transparent);
 	margin: 0;
@@ -86,7 +95,7 @@
 		margin-inline: auto;
 	}
 
-	&:hover {
+	&:not(:disabled):hover {
 		color: var(--highcontrast-clear-button-icon-color-hover, var(--mod-clear-button-icon-color-hover, var(--spectrum-clear-button-icon-color-hover)));
 
 		.spectrum-ClearButton-fill {
@@ -94,7 +103,7 @@
 		}
 	}
 
-	&:active {
+	&:not(:disabled):active {
 		color: var(--mod-clear-button-icon-color-down, var(--spectrum-clear-button-icon-color-down));
 
 		.spectrum-ClearButton-fill {
@@ -102,13 +111,20 @@
 		}
 	}
 
-	&:focus-visible,
-	&:focus-within {
+	&:not(:disabled):focus-visible,
+	&:not(:disabled):focus-within {
 		color: var(--mod-clear-button-icon-color-key-focus, var(--spectrum-clear-button-icon-color-key-focus));
 
 		.spectrum-ClearButton-fill {
 			background-color: var(--mod-clear-button-background-color-key-focus, var(--spectrum-clear-button-background-color-key-focus));
 		}
+	}
+}
+
+.spectrum-ClearButton:disabled,
+.spectrum-ClearButton.is-disabled {
+  .spectrum-ClearButton-icon {
+		color: var( --highcontrast-clear-button-icon-color-disabled, var(--mod-clear-button-icon-color-disabled, var(--spectrum-clear-button-icon-color-disabled)));
 	}
 }
 
@@ -124,6 +140,8 @@
 	justify-content: center;
 }
 
+/* @deprecated .spectrum-ClearButton--overBackground */
+.spectrum-ClearButton--staticWhite,
 .spectrum-ClearButton--overBackground {
 	&:focus-visible {
 		outline: none;
